# shopware-upgrade-intelligence

./: .gitignore  Justfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  area-routing.md  benchmarks.md  claude-code-setup.md
scripts/: bootstrap-macos.sh
src/shopware_intel/: areas.py  config.py  mcp_server.py  state.py
src/shopware_intel/cli/: doctor.py  ingest.py  parallel.py  query.py
src/shopware_intel/ingest/: clone.py  embed.py  extract.py  load.py  orchestrator.py
src/shopware_intel/ingest/chunk/: base.py  changelog.py  markdown.py  php.py  php_ts.py  scss.py  ts_js.py  twig.py  vue.py  xml.py
src/shopware_intel/retrieval/: css_class.py  deprecations.py  search.py  upgrade_path.py  why_changed.py
tests/: test_areas.py  test_chunk_changelog.py  test_chunk_markdown.py  test_chunk_php.py  test_chunk_php_ts.py  test_chunk_scss.py  test_chunk_twig.py  test_css_class.py  test_embedding_text.py  test_search_dedup.py  test_supplement_export_ignored.py  test_upgrade_path.py  test_vector_cache.py  test_why_changed.py
