[project]
name = "shopware-intel"
version = "0.1.0dev0"
description = "RAG-MCP server for searching every Shopware 6 version locally — find deprecations, renames, breaking changes across versions"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Andreas Henkel" }]
keywords = ["rag", "mcp", "shopware", "embeddings", "ollama", "qdrant", "semantic-search", "local-ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "mcp>=1.27.1",
  "qdrant-client>=1.12",
  "ollama>=0.4",
  "pydantic>=2.7",
  "pydantic-settings>=2.5",
  "typer>=0.12",
  "rich>=13",
  "httpx>=0.27",
  "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-pyyaml",
]

[project.scripts]
sw-intel-mcp = "shopware_intel.mcp_server:main"
sw-intel-ingest = "shopware_intel.cli.ingest:app"
sw-intel-doctor = "shopware_intel.cli.doctor:app"
sw-intel-query = "shopware_intel.cli.query:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shopware_intel"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["qdrant_client.*", "ollama.*", "mcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
